Scrollbar fix.

--- a/packages/editor/_index.css
+++ b/packages/editor/_index.css
@@ -13,3 +13,7 @@
 .sc-document-editor  .sc-paragraph {
   padding-bottom: 10px;
 }
+
+.sc-document-editor .sc-scrollbar {
+  z-index: 10;
+}
